--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
